src/style.css
:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}
a:hover {
  color: #535bf2;
}

body {
  margin: 0;
  display: flex;
  place-items: center;
  justify-content: center; 
  align-items: center; 
  flex-direction: row; 
  min-width: 320px;
  min-height: 100vh;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
  margin: 0; 
  padding-bottom: 1rem; 
  position: absolute; 
  top: 30px; 
  left: 50%; 
  transform: translateX(-50%); 
}

#app {
  max-width: 1280px;
  margin: 0 auto;
  padding: 2rem;
  text-align: center;
}

.logo {
  height: 6em;
  padding: 1.5em;
  will-change: filter;
}
.logo:hover {
  filter: drop-shadow(0 0 2em #646cffaa);
}
.logo.vanilla:hover {
  filter: drop-shadow(0 0 2em #3178c6aa);
}

.card {
  padding: 2em;
}

.read-the-docs {
  color: #888;
}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 5px 10px;
  font-size: 24px; /* Set font size for emoji */
  font-weight: 500;
  font-family: inherit;
  background-color: #1a1a1a;
  cursor: pointer;
  transition: border-color 0.25s;
  margin-top: 10px;
}
button:hover {
  border-color: #646cff;
}
button:focus,
button:focus-visible {
  outline: none;
  border-color: #646cff;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
  a:hover {
    color: #747bff;
  }
  button {
    background-color: #f9f9f9;
  }
}
html, body {
  height:100%;
  margin: 0;
  display: flex;
  justify-content: center;
  align-items: center;
}
#drawingCanvas{
  border: 3px solid black;
  width: 256px;
  height: 256px;
  display: block;
  background-color: white;
  border-radius: 15px; 
  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4); 
}

#clearButton{
  margin-top: 10px;
}

#canvasContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  position: relative;
}

#buttonContainer {
  display: flex;
  flex-direction: row;
  gap: 10px; /* Add some space between buttons */
  margin-top: 10px;
}

.selectedTool {
  background-color: #007bff;
  color: white;
}

